tests/specs/check/check_node_builtin_modules/mod.ts.tsgo.out
Check mod.ts
TS2769 [ERROR]: No overload matches this call.
const _data = fs.readFileSync("./node_builtin.js", 123);
                                                   ~~~
    at [WILDLINE]/mod.ts:2:52

TS2771 [ERROR]:     The last overload is declared here.
        export function readFileSync(
                        ~~~~~~~~~~~~
        at [WILDLINE]/fs.d.cts:2925:21

TS4104 [ERROR]: The type 'readonly string[]' is 'readonly' and cannot be assigned to the mutable type 'number[]'.
const _testString: number[] = builtinModules;
      ~~~~~~~~~~~
    at [WILDLINE]/mod.ts:9:7

Found 2 errors.

error: Type checking failed.
